About to mess something up

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -133,7 +133,7 @@
                     <div class="card" id="card-1">
                         <div class="card-body py-4 mt-2">
                             <h2 class="d-flex justify-content-center mb-4 font-weight-bold" style="font-family: Italiana">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" class="rounded-circle shadow-1-strong" width="100" height="100" />
+                                <img  alt="Service Provider Logo"class="rounded-circle shadow-1-strong" width="100" height="100" />
                             </h2>
                             <h5 >Teresa May</h5>
                             <h5 class=" rating">Founder at ET Company</h5>
@@ -1033,7 +1033,7 @@
 
     </body>
         <script src="/js/directory.js"></script>
-        <script src="/js/landing-page.js"></script>
+        <script src="/js/index.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
         <script src="/js/popper.min.js"></script>
